[chore] 전체 병합을 위한 진행상황 업데이트 #55

--- a/client/page_productDetail.html
+++ b/client/page_productDetail.html
@@ -1166,139 +1166,139 @@
   </div>
 </div>
 
-  <!-- 창환님 코드 영역-->
+<!-- 푸터 -->
   <footer class="footer_wrap">
     <section class="information_wrap container">
-    <article class="consumer">
-      <span class="consumer_title">
-        고객행복센터
-      </span>
-      
-      <span class="consumer_number">
-        1644-1107
-        <span class="consumer_time">월~토요일 오전 7시 ~ 오후 6시</span>
-      </span>
-
-      <div class="question_wrap">
-        <div class="question_kakao">
-          <button class="question_btn">카카오톡 문의</button>
-          <span class="question_text">
-            <p class="first">월~토요일 | 오전 7시 ~ 오후 6시</p>
-            <p class="second">일/공휴일 | 오전 7시 ~ 오후 1시</p>
+      <article class="consumer">
+          <span class="consumer_title">
+            고객행복센터
           </span>
-        </div>
 
-        <div class="question_oneOnOne">
-          <button class="question_btn">1:1 문의</button>
-          <span class="question_text">
-            <p class="first">365일</p>
-            <p class="second">고객센터 운영시간에 순차적으로 답변드리겠습니다.</p>
+        <span class="consumer_number">
+            1644-1107
+            <span class="consumer_time">월~토요일 오전 7시 ~ 오후 6시</span>
           </span>
+
+        <div class="question_wrap">
+          <div class="question_kakao">
+            <button class="question_btn">카카오톡 문의</button>
+            <span class="question_text">
+                <p class="first">월~토요일 | 오전 7시 ~ 오후 6시</p>
+                <p class="second">일/공휴일 | 오전 7시 ~ 오후 1시</p>
+              </span>
+          </div>
+
+          <div class="question_oneOnOne">
+            <button class="question_btn">1:1 문의</button>
+            <span class="question_text">
+                <p class="first">365일</p>
+                <p class="second">고객센터 운영시간에 순차적으로 답변드리겠습니다.</p>
+              </span>
+          </div>
+
+          <div class="question_lot">
+            <button class="question_btn">대량주문 문의</button>
+            <span class="question_text">
+                <p class="first">월~금요일 | 오전 9시 ~ 오후 6시</p>
+                <p class="second">점심시간 | 낮 12시 ~ 오후 1시</p>
+              </span>
+          </div>
+
+          <div class="question_email">
+            <p class="first">비회원 문의 : <a href="mailto:help@karlycorp.com">help@karlycorp.com</a></p>
+            <p class="second">비회원 대량주문 문의 : <a href="mailto:help@karlycorp.com">help@karlycorp.com</a></p>
+          </div>
+        </div>
+      </article>
+
+      <article class="company">
+        <div class="company_policy">
+          <a href="#">칼리소개</a>
+          <a href="#">칼리소개영상</a>
+          <a href="#">인재채용</a>
+          <a href="#">이용약관</a>
+          <a href="#">개인정보처리방침</a>
+          <a href="#">이용안내</a>
         </div>
 
-        <div class="question_lot">
-          <button class="question_btn">대량주문 문의</button>
-          <span class="question_text">
-            <p class="first">월~금요일 | 오전 9시 ~ 오후 6시</p>
-            <p class="second">점심시간 | 낮 12시 ~ 오후 1시</p>
-          </span>
+        <div class="company_introduce">
+          <p>
+            법인명 (상호) : 주식회사 컬리<span class="footer_bar">|</span>사업자등록번호 : 261-81-23567<span class="footer_bar">|</span><a href="#">사업자정보 확인</a>
+          </p>
+          <p>
+            통신판매업 : 제 2018-서울강남-01646 호<span class="footer_bar">|</span>개인정보보호책임자 : 이원준
+          </p>
+          <p>
+            주소 : 서울특별시 강남구 테헤란로 133, 18층(역삼동)<span class="footer_bar">|</span>대표이사 : 김슬아
+          </p>
+          <p>
+            입점문의 : <a href="#">입정문의하기</a><span class="footer_bar">|</span>제휴문의 : <a href="#">business@karlycorp.com</a>
+          </p>
+          <p>채용문의 : recruit@karlycorp.com</p>
+          <p>팩스 : 070 - 7500 - 6098</p>
         </div>
 
-        <div class="question_email">
-          <p class="first">비회원 문의 : <a href="">help@karlycorp.com</a></p>
-          <p class="second">비회원 대량주문 문의 : <a href="">help@karlycorp.com</a></p>
+        <div class="company_sns_wrap">
+          <a class="company_sns" href="#" aria-label="회사 소식을 전하는 소셜서비스 네이버 블로그에 연결">
+            <img src="./assets/icons/sns/blog.png" alt=""/>
+          </a>
+
+          <a class="company_sns" href="#" aria-label="회사 소식을 전하는 소셜서비스 페이스북에 연결">
+            <img src="./assets/icons/sns/faceBook.png" alt=""/>
+          </a>
+
+          <a class="company_sns" href="#" aria-label="회사 소식을 전하는 소셜서비스 인스타그램에 연결">
+            <img src="./assets/icons/sns/instagram.png" alt=""/>
+          </a>
+
+          <a class="company_sns" href="#" aria-label="회사 소식을 전하는 소셜서비스 네이버 포스트에 연결">
+            <img src="./assets/icons/sns/post.png" alt=""/>
+          </a>
+
+          <a class="company_sns" href="#" aria-label="회사 소식을 전하는 소셜서비스 유튜브에 연결">
+            <img src="./assets/icons/sns/youtube.png" alt=""/>
+          </a>
         </div>
-      </div>
-    </article>
-
-    <article class="company">
-      <div class="company_policy">
-        <a href="#">칼리소개</a>
-        <a href="#">칼리소개영상</a>
-        <a href="#">인재채용</a>
-        <a href="#">이용약관</a>
-        <a href="#">개인정보처리방침</a>
-        <a href="#">이용안내</a>
-      </div>
-    
-      <div class="company_introduce">
-        <p>
-          법인명 (상호) : 주식회사 컬리<span class="footer_bar">|</span>사업자등록번호 : 261-81-23567<span class="footer_bar">|</span><a href="#">사업자정보 확인</a>
-        </p>
-        <p>
-          통신판매업 : 제 2018-서울강남-01646 호<span class="footer_bar">|</span>개인정보보호책임자 : 이원준
-        </p>
-        <p>
-          주소 : 서울특별시 강남구 테헤란로 133, 18층(역삼동)<span class="footer_bar">|</span>대표이사 : 김슬아
-        </p>
-        <p>
-          입점문의 : <a href="#">입정문의하기</a><span class="footer_bar">|</span>제휴문의 : <a href="#">business@karlycorp.com</a>
-        </p>
-        <p>채용문의 : recruit@karlycorp    .com</p>
-        <p>팩스 : 070 - 7500 - 6098</p>
-      </div>
-
-      <div class="company_sns_wrap">
-        <a class="company_sns" href="#">
-          <img src="./assets/icons/sns/blog.png" alt=""/>
-        </a>
-
-        <a class="company_sns" href="#">
-          <img src="./assets/icons/sns/faceBook.png" alt=""/>
-        </a>
-
-        <a class="company_sns" href="#">
-          <img src="./assets/icons/sns/instagram.png" alt=""/>
-        </a>
-
-        <a class="company_sns" href="#">
-          <img src="./assets/icons/sns/post.png" alt=""/>
-        </a>
-
-        <a class="company_sns" href="#">
-          <img src="./assets/icons/sns/youtube.png" alt=""/>
-        </a>
-      </div>
-    </article>
+      </article>
     </section>
 
     <section class="alliance_wrap container">
-    <button class="alliance_btn alliance_isms">
-      <img src="./assets/icons/footer/isms.png" alt=""/>
-      <p>
-        [인증범위] 마켓칼리 쇼핑몰 서비스 개발 운영<br/>
-        (심사받지 않은 물리적 인프라 제외)<br/>
-        [유효기간] 2022.01.19 ~ 2025.01.18<br/>
-      </p>
-    </button>
+      <button class="alliance_btn alliance_isms">
+        <img src="./assets/icons/footer/isms.png" alt=""/>
+        <p>
+          [인증범위] 마켓칼리 쇼핑몰 서비스 개발 운영<br/>
+          (심사받지 않은 물리적 인프라 제외)<br/>
+          [유효기간] 2022.01.19 ~ 2025.01.18<br/>
+        </p>
+      </button>
 
-    <button class="alliance_btn alliance_eprivacy">
-      <img src="./assets/icons/footer/eprivacy.png" alt=""/>
-      <p>
-        개인정보보호 우수 웹사이트<br/>
-        개인정보처리시스템 인증 (ePRIVACY PLUS)
-      </p>
-    </button>
+      <button class="alliance_btn alliance_eprivacy">
+        <img src="./assets/icons/footer/eprivacy.png" alt=""/>
+        <p>
+          개인정보보호 우수 웹사이트<br/>
+          개인정보처리시스템 인증 (ePRIVACY PLUS)
+        </p>
+      </button>
 
-    <button class="alliance_btn alliance_payment">
-      <img src="./assets/icons/footer/payment.png" alt=""/>
-      <p>
-        토이페이먼츠 구매안전(에스크로) 서비스를 이용하실 수 있습니다.
-      </p>
-    </button>
+      <button class="alliance_btn alliance_payment">
+        <img src="./assets/icons/footer/payment.png" alt=""/>
+        <p>
+          토이페이먼츠 구매안전(에스크로) 서비스를 이용하실 수 있습니다.
+        </p>
+      </button>
 
-    <button class="alliance_btn alliance_wooribank">
-      <img src="./assets/icons/footer/wooribank.png" alt=""/>
-      <p>
-        고객님이 현금으로 결제한 금액에 대해 우리은행과 재무지급보증 계약을 체결하여 안전거래를 보장하고 있습니다.
-      </p>
-    </button>
+      <button class="alliance_btn alliance_wooribank">
+        <img src="./assets/icons/footer/wooribank.png" alt=""/>
+        <p>
+          고객님이 현금으로 결제한 금액에 대해 우리은행과 재무지급보증 계약을 체결하여 안전거래를 보장하고 있습니다.
+        </p>
+      </button>
     </section>
 
     <section class="copyright_wrap container">
-    <p class="first">마켓컬리에서 판매되는 상품 중에는 마켓컬리에 입점한 개별 판매자가 판매하는 마켓플레이스(오픈마켓) 상품이 포함되어 있습니다.</p>
-    <p class="second">마켓플레이스(오픈마켓) 상품의 경우 컬리는 통신판매중개자로서 통신판매의 당사자가 아닙니다. 컬리는 해당 상품의 주문, 품질, 교환/환불 등 의무와 책임을 부담하지 않습니다.</p>
-    <p class="copyright_text">© KURLY CORP. ALL RIGHTS RESERVED</p>
+      <p class="first">마켓컬리에서 판매되는 상품 중에는 마켓컬리에 입점한 개별 판매자가 판매하는 마켓플레이스(오픈마켓) 상품이 포함되어 있습니다.</p>
+      <p class="second">마켓플레이스(오픈마켓) 상품의 경우 컬리는 통신판매중개자로서 통신판매의 당사자가 아닙니다. 컬리는 해당 상품의 주문, 품질, 교환/환불 등 의무와 책임을 부담하지 않습니다.</p>
+      <p class="copyright_text">© KURLY CORP. ALL RIGHTS RESERVED</p>
     </section>
   </footer>
 
