[chore] 전체 병합을 위한 진행상황 업데이트 2 #55

--- a/client/page_productDetail.html
+++ b/client/page_productDetail.html
@@ -18,7 +18,7 @@
   <script src="./js/main.js" type="module"></script>
   <!-- Initialize Swiper -->
 <script type="module">
-  const swiper = new Swiper(".mySwiper", {
+  const swiper = new Swiper(".mySwiper1", {
     navigation: {
       nextEl: ".swiper-button-next",
       prevEl: ".swiper-button-prev",
