[feat] 회원가입 기능 구현 완료 #31

--- a/client/register.html
+++ b/client/register.html
@@ -2,16 +2,16 @@
   <html lang="ko-KR">
   <head>
     <meta charset="UTF-8"/>
+    <title>회원가입</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     <meta name="keywords" content="회원가입"/>
-    <meta name="description" content="회원가입을 하는 페이지 입니다.">
+    <meta name="description" content="회원가입을 하는 페이지 입니다."/>
     <meta name="og:type" content="website" />
-    <title>회원가입</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.css"/>
     <link rel="stylesheet" href="./css/register.css"/>
     <link rel="stylesheet" href="./css/common.css"/>
     <script src="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.js"></script>
-    <script src="./js/register/register.js" defer></script>
+    <script src="./js/register/register.js" type="module"></script>
     <script src="https://t1.daumcdn.net/mapjsapi/bundle/postcode/prod/postcode.v2.js"></script>
   </head>
 <body>
