--- a/client/page_productDetail_dr.html
+++ b/client/page_productDetail_dr.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="ko-KR">
+<html lang="ko-KR"> 
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -21,7 +21,7 @@
     });
   </script>
 </head>
-
+<!-- test -->
 <body>
   <!-- 헤 더 -->
   <header class="header_wrap">
