--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
       <div class="popup container">
         <a class="popup_text" href="#">지금 가입하고 인기상품 <b>100원</b>에 받아가세요!</a>
         <button class="popup_btn">
-          <img class="popup_img" src="./assets/icons/Icon/close_btn.png" alt="상단 배너를 닫을수 있는 X표시의 버튼" />
+          <img class="popup_img" src="./client/assets/icons/Icon/close_btn.png" alt="상단 배너를 닫을수 있는 X표시의 버튼" />
         </button>
       </div>
     </section>
@@ -49,7 +49,7 @@
         <li class="topbtn_cs">
           <a href="#">
             고객센터
-            <img src="./assets/icons/Icon/arrow_bottom.png" alt="하위 메뉴를 알리는 아래방향 화살표"/>
+            <img src="./client/assets/icons/Icon/arrow_bottom.png" alt="하위 메뉴를 알리는 아래방향 화살표"/>
           </a>
           <ul class="cs_list">
             <li>
@@ -84,7 +84,7 @@
       <article class="logo_wrap">
         <h1>
           <a href="#">
-            <img class="logo_img" src="./assets/icons/Icon/logo.png" alt="홈페이지 마켓칼리를 설명하는 보라색 로고 이미지" />
+            <img class="logo_img" src="./client/assets/icons/Icon/logo.png" alt="홈페이지 마켓칼리를 설명하는 보라색 로고 이미지" />
           </a>
         </h1>
         <a class="market_part is_active" href="#">마켓컬리</a>
@@ -132,154 +132,154 @@
         <ul>
           <li>
             <a href="#">
-              <img src="./assets/icons/category/gift.png" alt="" />
+              <img src="./client/assets/icons/category/gift.png" alt="" />
               <span>선물하기</span>
             </a>
           </li>
 
           <li>
             <a href="#">
-              <img src="./assets/icons/category/vegetable.png" alt="" />
+              <img src="./client/assets/icons/category/vegetable.png" alt="" />
               <span>채소</span>
             </a>
           </li>
 
           <li>
             <a href="#">
-              <img src="./assets/icons/category/fruit.png" alt="" />
+              <img src="./client/assets/icons/category/fruit.png" alt="" />
               <span>과일 · 견과 · 쌀</span>
             </a>
           </li>
 
           <li>
             <a href="#">
-              <img src="./assets/icons/category/seaFood.png" alt="" />
+              <img src="./client/assets/icons/category/seaFood.png" alt="" />
               <span>수산 · 해산 · 건어물</span>
             </a>
           </li>
 
           <li>
             <a href="#">
-              <img src="./assets/icons/category/meet.png" alt="" />
+              <img src="./client/assets/icons/category/meet.png" alt="" />
               <span>정육 · 계란</span>
             </a>
           </li>
 
           <li>
             <a href="#">
-              <img src="./assets/icons/category/cook.png" alt="" />
+              <img src="./client/assets/icons/category/cook.png" alt="" />
               <span>국 · 반찬 · 메인요리</span>
             </a>
           </li>
 
           <li>
             <a href="#">
-              <img src="./assets/icons/category/salad.png" alt="" />
+              <img src="./client/assets/icons/category/salad.png" alt="" />
               <span>샐러드 · 간편식</span>
             </a>
           </li>
 
           <li>
             <a href="#">
-              <img src="./assets/icons/category/spice.png" alt="" />
+              <img src="./client/assets/icons/category/spice.png" alt="" />
               <span>면 · 양념 · 오일</span>
             </a>
           </li>
 
           <li>
             <a href="#">
-              <img src="./assets/icons/category/coffee.png" alt="" />
+              <img src="./client/assets/icons/category/coffee.png" alt="" />
               <span>생수 · 음료 · 우유 · 커피</span>
             </a>
           </li>
 
           <li>
             <a href="#">
-              <img src="./assets/icons/category/snack.png" alt="" />
+              <img src="./client/assets/icons/category/snack.png" alt="" />
               <span>간식 · 과자 · 떡</span>
             </a>
           </li>
 
           <li>
             <a href="#">
-              <img src="./assets/icons/category/bakery.png" alt="" />
+              <img src="./client/assets/icons/category/bakery.png" alt="" />
               <span>베이커리 · 치즈 · 델리</span>
             </a>
           </li>
 
           <li>
             <a href="#">
-              <img src="./assets/icons/category/health.png" alt="" />
+              <img src="./client/assets/icons/category/health.png" alt="" />
               <span>건강식품</span>
             </a>
           </li>
 
           <li>
             <a href="#">
-              <img src="./assets/icons/category/wine.png" alt="" />
+              <img src="./client/assets/icons/category/wine.png" alt="" />
               <span>와인</span>
             </a>
           </li>
 
           <li>
             <a href="#">
-              <img src="./assets/icons/category/traditionalLiquor.png" alt="" />
+              <img src="./client/assets/icons/category/traditionalLiquor.png" alt="" />
               <span>전통주</span>
             </a>
           </li>
 
           <li>
             <a href="#">
-              <img src="./assets/icons/category/detergent.png" alt="" />
+              <img src="./client/assets/icons/category/detergent.png" alt="" />
               <span>생활용품 · 리빙 · 캠핑</span>
             </a>
           </li>
 
           <li>
             <a href="#">
-              <img src="./assets/icons/category/skincare.png" alt="" />
+              <img src="./client/assets/icons/category/skincare.png" alt="" />
               <span>스킨케어 · 메이크업</span>
             </a>
           </li>
 
           <li>
             <a href="#">
-              <img src="./assets/icons/category/shampoo.png" alt="" />
+              <img src="./client/assets/icons/category/shampoo.png" alt="" />
               <span>헤어 · 바디 · 구강</span>
             </a>
           </li>
 
           <li>
             <a href="#">
-              <img src="./assets/icons/category/kitchen.png" alt="" />
+              <img src="./client/assets/icons/category/kitchen.png" alt="" />
               <span>주방용품</span>
             </a>
           </li>
 
           <li>
             <a href="#">
-              <img src="./assets/icons/category/wash.png" alt="" />
+              <img src="./client/assets/icons/category/wash.png" alt="" />
               <span>가전제품</span>
             </a>
           </li>
 
           <li>
             <a href="#">
-              <img src="./assets/icons/category/animal.png" alt="" />
+              <img src="./client/assets/icons/category/animal.png" alt="" />
               <span>반려동물</span>
             </a>
           </li>
 
           <li>
             <a href="#">
-              <img src="./assets/icons/category/baby.png" alt="" />
+              <img src="./client/assets/icons/category/baby.png" alt="" />
               <span>베이비 · 키즈 · 완구</span>
             </a>
           </li>
 
           <li>
             <a href="#">
-              <img src="./assets/icons/category/travel.png" alt="" />
+              <img src="./client/assets/icons/category/travel.png" alt="" />
               <span>여행 · 티켓</span>
             </a>
           </li>
@@ -819,23 +819,23 @@
 
         <div class="company_sns_wrap">
           <a class="company_sns" href="#" aria-label="회사 소식을 전하는 소셜서비스 네이버 블로그에 연결">
-            <img src="./assets/icons/sns/blog.png" alt=""/>
+            <img src="./client/assets/icons/sns/blog.png" alt=""/>
           </a>
 
           <a class="company_sns" href="#" aria-label="회사 소식을 전하는 소셜서비스 페이스북에 연결">
-            <img src="./assets/icons/sns/faceBook.png" alt=""/>
+            <img src="./client/assets/icons/sns/faceBook.png" alt=""/>
           </a>
 
           <a class="company_sns" href="#" aria-label="회사 소식을 전하는 소셜서비스 인스타그램에 연결">
-            <img src="./assets/icons/sns/instagram.png" alt=""/>
+            <img src="./client/assets/icons/sns/instagram.png" alt=""/>
           </a>
 
           <a class="company_sns" href="#" aria-label="회사 소식을 전하는 소셜서비스 네이버 포스트에 연결">
-            <img src="./assets/icons/sns/post.png" alt=""/>
+            <img src="./client/assets/icons/sns/post.png" alt=""/>
           </a>
 
           <a class="company_sns" href="#" aria-label="회사 소식을 전하는 소셜서비스 유튜브에 연결">
-            <img src="./assets/icons/sns/youtube.png" alt=""/>
+            <img src="./client/assets/icons/sns/youtube.png" alt=""/>
           </a>
         </div>
       </article>
@@ -843,7 +843,7 @@
 
     <section class="alliance_wrap container">
       <button class="alliance_btn alliance_isms">
-        <img src="./assets/icons/footer/isms.png" alt=""/>
+        <img src="./client/assets/icons/footer/isms.png" alt=""/>
         <p>
           [인증범위] 마켓칼리 쇼핑몰 서비스 개발 운영<br/>
           (심사받지 않은 물리적 인프라 제외)<br/>
@@ -852,7 +852,7 @@
       </button>
 
       <button class="alliance_btn alliance_eprivacy">
-        <img src="./assets/icons/footer/eprivacy.png" alt=""/>
+        <img src="./client/assets/icons/footer/eprivacy.png" alt=""/>
         <p>
           개인정보보호 우수 웹사이트<br/>
           개인정보처리시스템 인증 (ePRIVACY PLUS)
@@ -860,14 +860,14 @@
       </button>
 
       <button class="alliance_btn alliance_payment">
-        <img src="./assets/icons/footer/payment.png" alt=""/>
+        <img src="./client/assets/icons/footer/payment.png" alt=""/>
         <p>
           토이페이먼츠 구매안전(에스크로) 서비스를 이용하실 수 있습니다.
         </p>
       </button>
 
       <button class="alliance_btn alliance_wooribank">
-        <img src="./assets/icons/footer/wooribank.png" alt=""/>
+        <img src="./client/assets/icons/footer/wooribank.png" alt=""/>
         <p>
           고객님이 현금으로 결제한 금액에 대해 우리은행과 재무지급보증 계약을 체결하여 안전거래를 보장하고 있습니다.
         </p>
