[feat] 스크롤시 상단에 고정되는 작은 메뉴 작동 구현 완료 #58

--- a/client/page_productDetail_my.html
+++ b/client/page_productDetail_my.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="ko-KR">
 <head>
+  <meta name="description" content="market Karly clone site" />
   <meta charset="UTF-8" />
   <title>마켓칼리</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -30,7 +31,7 @@
   <!-- 창환님 코드 영역 -->
 
   <!-- 창환님 new 헤더 코드 -->
-  <header class="header_wrap">
+  <header class="header_wrap" style="height: auto;">
     <section class="popup_wrap">
       <div class="popup container">
         <a class="popup_text" href="#">지금 가입하고 인기상품 <b>100원</b>에 받아가세요!</a>
@@ -301,7 +302,7 @@
         <a href="#">신상품</a>
         <a href="#">베스트</a>
         <a href="#">알뜰쇼핑</a>
-        <a href="#">특가/헤택</a>
+        <a href="#">특가/혜택</a>
       </div>
 
       <div class="delivery">
@@ -312,7 +313,7 @@
       </div>
     </nav>
 
-    <!-- 스크롤바 내릴때 나타나는 창 -->
+    <!-- 스크롤바 내릴때 나타나는 축소 메뉴창 -->
     <div class="small_header_nav a11y_hidden">
       <section class="category">
           <a href="#">
@@ -483,7 +484,7 @@
         <a href="#">신상품</a>
         <a href="#">베스트</a>
         <a href="#">알뜰쇼핑</a>
-        <a href="#">특가/헤택</a>
+        <a href="#">특가/혜택</a>
       </div>
       <div class="small_nav_search">
         <article>
