--- a/client/page_productDetail_dr.html
+++ b/client/page_productDetail_dr.html
@@ -302,7 +302,7 @@
         <a href="#">신상품</a>
         <a href="#">베스트</a>
         <a href="#">알뜰쇼핑</a>
-        <a href="#">특가/헤택</a>
+        <a href="#">특가/혜택</a>
       </div>
 
       <div class="delivery">
