[refac] 이미지 최적화 적용 #62

--- a/client/cart.html
+++ b/client/cart.html
@@ -359,7 +359,7 @@
 
                     <a href="#" class="product_img">
                       <img
-                        src="./assets/thumbnail/product01.png"
+                        src="./assets/thumbnail/product01.webp"
                         alt="[풀무원]탱탱쫄면(4개입)"
                       />
                     </a>
@@ -408,7 +408,7 @@
 
                     <a href="#" class="product_img">
                       <img
-                        src="./assets/thumbnail/product01.png"
+                        src="./assets/thumbnail/product01.webp"
                         alt="[풀무원]탱탱쫄면(4개입)"
                       />
                     </a>
@@ -473,7 +473,7 @@
 
                     <a href="#" class="product_img">
                       <img
-                        src="./assets/thumbnail/product01.png"
+                        src="./assets/thumbnail/product01.webp"
                         alt="[풀무원]탱탱쫄면(4개입)"
                       />
                     </a>
