[bug] 데이터로 불러온 리스트 querySelector로 안잡힘 #74

--- a/client/cart.html
+++ b/client/cart.html
@@ -11,7 +11,7 @@
     <link rel="stylesheet" href="./css/cart.css" />
     <link rel="stylesheet" href="./css/common.css" />
     <script src="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.js"></script>
-    <script src="./js/cart/cart_data.js" type="module"></script>
+    <script src="./js/cart/cart.js" type="module"></script>
     <title>마켓칼리</title>
   </head>
 
