--- a/client/cart.html
+++ b/client/cart.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="ko-KR">
   <head>
+    <meta name="description" content="market Karly clone site" />
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
