--- a/client/productList.html
+++ b/client/productList.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="ko-KR">
   <head>
+    <meta name="description" content="market Karly clone site" />
     <meta charset="UTF-8" />
     <title>마켓칼리</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
