--- a/client/productList.html
+++ b/client/productList.html
@@ -311,7 +311,7 @@
           <a href="#">신상품</a>
           <a href="#">베스트</a>
           <a href="#">알뜰쇼핑</a>
-          <a href="#">특가/헤택</a>
+          <a href="#">특가/혜택</a>
         </div>
 
         <div class="delivery">
@@ -1350,7 +1350,7 @@
               >대표이사 : 김슬아
             </p>
             <p>
-              입점문의 : <a href="#">입정문의하기</a
+              입점문의 : <a href="#">입점문의하기</a
               ><span class="footer_bar">|</span>제휴문의 :
               <a href="#">business@karlycorp.com</a>
             </p>
