--- a/client/register.html
+++ b/client/register.html
@@ -1,12 +1,10 @@
 <!DOCTYPE html>
   <html lang="ko-KR">
   <head>
-    <meta charset="UTF-8"/>
+    <meta name="description" content="market Karly clone site" />
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>회원가입</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-    <meta name="keywords" content="회원가입"/>
-    <meta name="description" content="회원가입을 하는 페이지 입니다."/>
-    <meta name="og:type" content="website" />
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.css"/>
     <link rel="stylesheet" href="./css/register.css"/>
     <link rel="stylesheet" href="./css/common.css"/>
