--- a/client/page_productDetail_dr.html
+++ b/client/page_productDetail_dr.html
@@ -3,8 +3,9 @@
 <head>
   <meta name="description" content="market Karly clone site" />
   <meta charset="UTF-8" />
-  <title>마켓칼리</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>상품상세</title>
+
   <link rel="stylesheet"
   href="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.css" />
   <link rel="stylesheet" href="./css/style.css" />
@@ -86,16 +87,9 @@
     </section>
 
     <section class="headContent_wrap container">
-      <div class="modal_cart a11y_hidden">
-        <img class="modal_img" src="assets/tangtang/detail_view.jpg" alt="">
-        <div>
-          <span class="modal_product_name">[풀무원] 탱탱쫄면 (4개입)</span>
-          <span class="modal_text">장바구니에 상품을 담았습니다.</span>
-        </div>
-      </div>
       <article class="logo_wrap">
         <h1>
-          <a href="#">
+          <a href="../index.html">
             <img class="logo_img" src="./assets/icons/Icon/logo.png" alt="홈페이지 마켓칼리를 설명하는 보라색 로고 이미지" />
           </a>
         </h1>
@@ -144,154 +138,154 @@
         <ul>
           <li>
             <a href="#">
-              <img src="./assets/icons/category/gift.png" alt="" />
+              <img src="./assets/icons/category/gift.png" alt="선물상자 모양의 아이콘" />
               <span>선물하기</span>
             </a>
           </li>
 
           <li>
             <a href="#">
-              <img src="./assets/icons/category/vegetable.png" alt="" />
+              <img src="./assets/icons/category/vegetable.png" alt="새싹 모양의 아이콘" />
               <span>채소</span>
             </a>
           </li>
 
           <li>
             <a href="#">
-              <img src="./assets/icons/category/fruit.png" alt="" />
+              <img src="./assets/icons/category/fruit.png" alt="사과와 벼가 그려져 있는 아이콘" />
               <span>과일 · 견과 · 쌀</span>
             </a>
           </li>
 
           <li>
             <a href="#">
-              <img src="./assets/icons/category/seaFood.png" alt="" />
+              <img src="./assets/icons/category/seaFood.png" alt="새우 모양의 아이콘" />
               <span>수산 · 해산 · 건어물</span>
             </a>
           </li>
 
           <li>
             <a href="#">
-              <img src="./assets/icons/category/meet.png" alt="" />
+              <img src="./assets/icons/category/meet.png" alt="잘린 고기 모양의 아이콘" />
               <span>정육 · 계란</span>
             </a>
           </li>
 
           <li>
             <a href="#">
-              <img src="./assets/icons/category/cook.png" alt="" />
+              <img src="./assets/icons/category/cook.png" alt="냄비 모양의 아이콘" />
               <span>국 · 반찬 · 메인요리</span>
             </a>
           </li>
 
           <li>
             <a href="#">
-              <img src="./assets/icons/category/salad.png" alt="" />
+              <img src="./assets/icons/category/salad.png" alt="그릇에 채소가 담긴 아이콘" />
               <span>샐러드 · 간편식</span>
             </a>
           </li>
 
           <li>
             <a href="#">
-              <img src="./assets/icons/category/spice.png" alt="" />
+              <img src="./assets/icons/category/spice.png" alt="통에 담긴 양념을 나타내는 아이콘" />
               <span>면 · 양념 · 오일</span>
             </a>
           </li>
 
           <li>
             <a href="#">
-              <img src="./assets/icons/category/coffee.png" alt="" />
+              <img src="./assets/icons/category/coffee.png" alt="김이 모락나는 잔을 나타낸 아이콘" />
               <span>생수 · 음료 · 우유 · 커피</span>
             </a>
           </li>
 
           <li>
             <a href="#">
-              <img src="./assets/icons/category/snack.png" alt="" />
+              <img src="./assets/icons/category/snack.png" alt="한입 베어 문 쿠키 모양의 아이콘" />
               <span>간식 · 과자 · 떡</span>
             </a>
           </li>
 
           <li>
             <a href="#">
-              <img src="./assets/icons/category/bakery.png" alt="" />
+              <img src="./assets/icons/category/bakery.png" alt="식빵 모양의 아이콘" />
               <span>베이커리 · 치즈 · 델리</span>
             </a>
           </li>
 
           <li>
             <a href="#">
-              <img src="./assets/icons/category/health.png" alt="" />
+              <img src="./assets/icons/category/health.png" alt="알약들이 늘어져있는 아이콘" />
               <span>건강식품</span>
             </a>
           </li>
 
           <li>
             <a href="#">
-              <img src="./assets/icons/category/wine.png" alt="" />
+              <img src="./assets/icons/category/wine.png" alt="술을 담은 병과 술잔이 그려진 아이콘" />
               <span>와인</span>
             </a>
           </li>
 
           <li>
             <a href="#">
-              <img src="./assets/icons/category/traditionalLiquor.png" alt="" />
+              <img src="./assets/icons/category/traditionalLiquor.png" alt="구시대에 사용했던 잔이 그려진 아이콘" />
               <span>전통주</span>
             </a>
           </li>
 
           <li>
             <a href="#">
-              <img src="./assets/icons/category/detergent.png" alt="" />
+              <img src="./assets/icons/category/detergent.png" alt="세제 모양의 아이콘" />
               <span>생활용품 · 리빙 · 캠핑</span>
             </a>
           </li>
 
           <li>
             <a href="#">
-              <img src="./assets/icons/category/skincare.png" alt="" />
+              <img src="./assets/icons/category/skincare.png" alt="붓과 화장품이 그려진 아이콘" />
               <span>스킨케어 · 메이크업</span>
             </a>
           </li>
 
           <li>
             <a href="#">
-              <img src="./assets/icons/category/shampoo.png" alt="" />
+              <img src="./assets/icons/category/shampoo.png" alt="샴푸통과 클렌징폼이 그려진 아이콘" />
               <span>헤어 · 바디 · 구강</span>
             </a>
           </li>
 
           <li>
             <a href="#">
-              <img src="./assets/icons/category/kitchen.png" alt="" />
+              <img src="./assets/icons/category/kitchen.png" alt="숟가락, 칼, 포크가 그려진 아이콘" />
               <span>주방용품</span>
             </a>
           </li>
 
           <li>
             <a href="#">
-              <img src="./assets/icons/category/wash.png" alt="" />
+              <img src="./assets/icons/category/wash.png" alt="세탁기 모양의 아이콘" />
               <span>가전제품</span>
             </a>
           </li>
 
           <li>
             <a href="#">
-              <img src="./assets/icons/category/animal.png" alt="" />
+              <img src="./assets/icons/category/animal.png" alt="강아지 모양의 아이콘" />
               <span>반려동물</span>
             </a>
           </li>
 
           <li>
             <a href="#">
-              <img src="./assets/icons/category/baby.png" alt="" />
+              <img src="./assets/icons/category/baby.png" alt="젖병과 아이용 숟가락이 그려진 아이콘" />
               <span>베이비 · 키즈 · 완구</span>
             </a>
           </li>
 
           <li>
             <a href="#">
-              <img src="./assets/icons/category/travel.png" alt="" />
+              <img src="./assets/icons/category/travel.png" alt="비행기가 그려진 아이콘" />
               <span>여행 · 티켓</span>
             </a>
           </li>
@@ -302,11 +296,11 @@
         <a href="#">신상품</a>
         <a href="#">베스트</a>
         <a href="#">알뜰쇼핑</a>
-        <a href="#">특가/혜택</a>
+        <a href="#">특가/헤택</a>
       </div>
 
       <div class="delivery">
-        <a href="#">
+        <a href="#" aria-label="배송안내 페이지로 이동하기 위한 버튼">
           <span>샛별·낮</span>
           배송안내
         </a>
@@ -1225,12 +1219,12 @@
 
       <article class="company">
         <div class="company_policy">
-          <a href="#">칼리소개</a>
-          <a href="#">칼리소개영상</a>
-          <a href="#">인재채용</a>
-          <a href="#">이용약관</a>
-          <a href="#">개인정보처리방침</a>
-          <a href="#">이용안내</a>
+          <a href="#" aria-label="칼리를 소개하는 글이 담긴 페이지로 연결">칼리소개</a>
+          <a href="#" aria-label="칼리를 소개하는 영상이 담긴 페이지로 연결">칼리소개영상</a>
+          <a href="#" aria-label="칼리에서 채용하는 인원에 대한 설명 하는 페이지로 연결">인재채용</a>
+          <a href="#" aria-label="칼리를 이용하는 약관에 대한 설명 하는 페이지로 연결">이용약관</a>
+          <a href="#" aria-label="칼리를 이용하는 유저의 개인정보처리방침을 설명 하는 페이지로 연결">개인정보처리방침</a>
+          <a href="#" aria-label="칼리를 이용하는 유저에게 알림을 알려주는 페이지">이용안내</a>
         </div>
 
         <div class="company_introduce">
@@ -1244,7 +1238,7 @@
             주소 : 서울특별시 강남구 테헤란로 133, 18층(역삼동)<span class="footer_bar">|</span>대표이사 : 김슬아
           </p>
           <p>
-            입점문의 : <a href="#">입점문의하기</a><span class="footer_bar">|</span>제휴문의 : <a href="#">business@karlycorp.com</a>
+            입점문의 : <a href="#">입정문의하기</a><span class="footer_bar">|</span>제휴문의 : <a href="#">business@karlycorp.com</a>
           </p>
           <p>채용문의 : recruit@karlycorp.com</p>
           <p>팩스 : 070 - 7500 - 6098</p>
@@ -1252,23 +1246,23 @@
 
         <div class="company_sns_wrap">
           <a class="company_sns" href="#" aria-label="회사 소식을 전하는 소셜서비스 네이버 블로그에 연결">
-            <img src="./assets/icons/sns/blog.png" alt=""/>
+            <img src="./assets/icons/sns/blog.png" alt="소셜 서비스 네이버 블로그 아이콘"/>
           </a>
 
           <a class="company_sns" href="#" aria-label="회사 소식을 전하는 소셜서비스 페이스북에 연결">
-            <img src="./assets/icons/sns/faceBook.png" alt=""/>
+            <img src="./assets/icons/sns/faceBook.png" alt="소셜 서비스 페이스북 아이콘"/>
           </a>
 
           <a class="company_sns" href="#" aria-label="회사 소식을 전하는 소셜서비스 인스타그램에 연결">
-            <img src="./assets/icons/sns/instagram.png" alt=""/>
+            <img src="./assets/icons/sns/instagram.png" alt="소셜 서비스 인스타그램 아이콘"/>
           </a>
 
           <a class="company_sns" href="#" aria-label="회사 소식을 전하는 소셜서비스 네이버 포스트에 연결">
-            <img src="./assets/icons/sns/post.png" alt=""/>
+            <img src="./assets/icons/sns/post.png" alt="소셜 서비스 네이버 포스트 아이콘"/>
           </a>
 
           <a class="company_sns" href="#" aria-label="회사 소식을 전하는 소셜서비스 유튜브에 연결">
-            <img src="./assets/icons/sns/youtube.png" alt=""/>
+            <img src="./assets/icons/sns/youtube.png" alt="소셜 서비스 유튜브 아이콘"/>
           </a>
         </div>
       </article>
@@ -1276,7 +1270,7 @@
 
     <section class="alliance_wrap container">
       <button class="alliance_btn alliance_isms">
-        <img src="./assets/icons/footer/isms.png" alt=""/>
+        <img src="./assets/icons/footer/isms.png" alt="회사 isms의 로고"/>
         <p>
           [인증범위] 마켓칼리 쇼핑몰 서비스 개발 운영<br/>
           (심사받지 않은 물리적 인프라 제외)<br/>
@@ -1285,7 +1279,7 @@
       </button>
 
       <button class="alliance_btn alliance_eprivacy">
-        <img src="./assets/icons/footer/eprivacy.png" alt=""/>
+        <img src="./assets/icons/footer/eprivacy.png" alt="회사 eprivacy의 로고"/>
         <p>
           개인정보보호 우수 웹사이트<br/>
           개인정보처리시스템 인증 (ePRIVACY PLUS)
@@ -1293,14 +1287,14 @@
       </button>
 
       <button class="alliance_btn alliance_payment">
-        <img src="./assets/icons/footer/payment.png" alt=""/>
+        <img src="./assets/icons/footer/payment.png" alt="회사 토스페이먼츠의 로고"/>
         <p>
-          토이페이먼츠 구매안전(에스크로) 서비스를 이용하실 수 있습니다.
+          토스페이먼츠 구매안전(에스크로) 서비스를 이용하실 수 있습니다.
         </p>
       </button>
 
       <button class="alliance_btn alliance_wooribank">
-        <img src="./assets/icons/footer/wooribank.png" alt=""/>
+        <img src="./assets/icons/footer/wooribank.png" alt="회사 우리은행의 로고"/>
         <p>
           고객님이 현금으로 결제한 금액에 대해 우리은행과 재무지급보증 계약을 체결하여 안전거래를 보장하고 있습니다.
         </p>
