--- a/client/page_productDetail_dr.html
+++ b/client/page_productDetail_dr.html
@@ -45,11 +45,11 @@
     <section class="topbtn_wrap container">
       <ul class="topbtn_list">
         <li class="topbtn_register">
-          <a href="#">회원가입</a>
+          <a href="./register.html">회원가입</a>
         </li>
 
         <li class="topbtn_login">
-          <a href="#">로그인</a>
+          <a href="./login.html">로그인</a>
         </li>
 
         <li class="topbtn_cs">
@@ -89,7 +89,7 @@
     <section class="headContent_wrap container">
       <article class="logo_wrap">
         <h1>
-          <a href="../index.html">
+          <a href="./index.html">
             <img class="logo_img" src="./assets/icons/Icon/logo.png" alt="홈페이지 마켓칼리를 설명하는 보라색 로고 이미지" />
           </a>
         </h1>
@@ -114,14 +114,9 @@
       </article>
 
       <article class="icon_wrap">
-        <div class="icon_location">
-          <div class="location_box">
-            <p class="location_text">배송지를 등록하고<br/> 구매가능한 상품을 확인하세요</p>
-            <button class="location_button">로그인</button>
-          </div>
-        </div>
+        <div class="icon_location"></div>
         <a class="icon_heart" href="#" aria-label="찜한 상품들의 목록을 보러갈 수 있는 아이콘"></a>
-        <a class="icon_cart" href="#" aria-label="장바구니에 담아둔 상품 목록을 보러갈 수 있는 아이콘"></a>
+        <a class="icon_cart" href="./cart.html" aria-label="장바구니에 담아둔 상품 목록을 보러갈 수 있는 아이콘"></a>
       </article>
     </section>
 
@@ -293,10 +288,10 @@
       </section>
 
       <div class="keyworld">
-        <a href="#">신상품</a>
-        <a href="#">베스트</a>
-        <a href="#">알뜰쇼핑</a>
-        <a href="#">특가/헤택</a>
+        <a href="./page_productDetail_dr.html">신상품</a>
+        <a href="./page_productDetail_dr.html">베스트</a>
+        <a href="./page_productDetail_dr.html">알뜰쇼핑</a>
+        <a href="./page_productDetail_dr.html">특가/헤택</a>
       </div>
 
       <div class="delivery">
