[refac] 상품상세 수정

--- a/client/page_productDetail_my.html
+++ b/client/page_productDetail_my.html
@@ -84,9 +84,16 @@
     </section>
 
     <section class="headContent_wrap container">
+      <div class="modal_cart a11y_hidden">
+        <img class="modal_img" src="assets/tangtang/detail_view.jpg" alt="">
+        <div>
+          <span class="modal_product_name">[풀무원] 탱탱쫄면 (4개입)</span>
+          <span class="modal_text">장바구니에 상품을 담았습니다.</span>
+        </div>
+      </div>
       <article class="logo_wrap">
         <h1>
-          <a href="./index.html">
+          <a href="#">
             <img class="logo_img" src="./assets/icons/Icon/logo.png" alt="홈페이지 마켓칼리를 설명하는 보라색 로고 이미지" />
           </a>
         </h1>
