--- a/client/page_productDetail_dr.html
+++ b/client/page_productDetail_dr.html
@@ -87,9 +87,16 @@
     </section>
 
     <section class="headContent_wrap container">
+      <div class="modal_cart a11y_hidden">
+        <img class="modal_img" src="assets/tangtang/detail_view.jpg" alt="">
+        <div>
+          <span class="modal_product_name">[풀무원] 탱탱쫄면 (4개입)</span>
+          <span class="modal_text">장바구니에 상품을 담았습니다.</span>
+        </div>
+      </div>
       <article class="logo_wrap">
         <h1>
-          <a href="./index.html">
+          <a href="#">
             <img class="logo_img" src="./assets/icons/Icon/logo.png" alt="홈페이지 마켓칼리를 설명하는 보라색 로고 이미지" />
           </a>
         </h1>
@@ -114,9 +121,14 @@
       </article>
 
       <article class="icon_wrap">
-        <div class="icon_location"></div>
+        <div class="icon_location">
+          <div class="location_box">
+            <p class="location_text">배송지를 등록하고<br/> 구매가능한 상품을 확인하세요</p>
+            <button class="location_button">로그인</button>
+          </div>
+        </div>
         <a class="icon_heart" href="#" aria-label="찜한 상품들의 목록을 보러갈 수 있는 아이콘"></a>
-        <a class="icon_cart" href="./cart.html" aria-label="장바구니에 담아둔 상품 목록을 보러갈 수 있는 아이콘"></a>
+        <a class="icon_cart" href="#" aria-label="장바구니에 담아둔 상품 목록을 보러갈 수 있는 아이콘"></a>
       </article>
     </section>
 
