--- a/client/index.html
+++ b/client/index.html
@@ -283,10 +283,10 @@
       </section>
 
       <div class="keyworld">
-        <a href="./page_productDetail_dr.html">신상품</a>
-        <a href="./page_productDetail_dr.html">베스트</a>
-        <a href="./page_productDetail_dr.html">알뜰쇼핑</a>
-        <a href="./page_productDetail_dr.html">특가/헤택</a>
+        <a href="./page_productDetail_my.html">신상품</a>
+        <a href="./page_productDetail_my.html">베스트</a>
+        <a href="./page_productDetail_my.html">알뜰쇼핑</a>
+        <a href="./page_productDetail_my.html">특가/헤택</a>
       </div>
 
       <div class="delivery">
