[react] 경로 재수정

--- a/client/page_productDetail_dr.html
+++ b/client/page_productDetail_dr.html
@@ -300,10 +300,10 @@
       </section>
 
       <div class="keyworld">
-        <a href="./page_productDetail_my.html">신상품</a>
-        <a href="./page_productDetail_my.html">베스트</a>
-        <a href="./page_productDetail_my.html">알뜰쇼핑</a>
-        <a href="./page_productDetail_my.html">특가/헤택</a>
+        <a href="./page_productDetail_dr.html">신상품</a>
+        <a href="./page_productDetail_dr.html">베스트</a>
+        <a href="./page_productDetail_dr.html">알뜰쇼핑</a>
+        <a href="./page_productDetail_dr.html">특가/헤택</a>
       </div>
 
       <div class="delivery">
@@ -812,24 +812,24 @@
             <img class="quest_icon" src="./assets/icons/Icon/question.svg" alt=""/>
             <div class="question">
               <p>
-                스티로폼 박스도 손상되어 있어 포장이 터져 엉망이네요</br>
+                스티로폼 박스도 손상되어 있어 포장이 터져 엉망이네요<br>
                 환불 요청합니다.
               </p>
             </div>
             <img class="ans_icon" src="./assets/icons/Icon/answer.svg" alt=""/>
             <div class="answer">
               <p>
-                안녕하세요. 칼리입니다.</br>
-                믿고 찾아주신 상품에 불편을 드려 정말 죄송합니다.</br>
-                 </br>
-                더불어, 해당 게시판은 실시간으로 상담이 어려워 순차적으로 답변드리고 있는 관계로 신속하게 답변 드리지 못하여 대단히 죄송합니다.</br> 
-                </br>
-                다행히도 고객님의 불편하셨던 사항은 고객행복센터를 통해 안내 받으신 점 확인하였습니다.</br> 
-                </br>
-                불편을 드려 정말 죄송할 따름이며, 고객님께 늘 신선하고 최상의 상품을 불편 없이 전달드리기 위해 최선을 다하는 칼리가 되겠습니다. </br>
-                </br>
-                  칼리 드림.</br>
-                </br>
+                안녕하세요. 칼리입니다.<br>
+                믿고 찾아주신 상품에 불편을 드려 정말 죄송합니다.<br>
+                 <br>
+                더불어, 해당 게시판은 실시간으로 상담이 어려워 순차적으로 답변드리고 있는 관계로 신속하게 답변 드리지 못하여 대단히 죄송합니다.<br> 
+                <br>
+                다행히도 고객님의 불편하셨던 사항은 고객행복센터를 통해 안내 받으신 점 확인하였습니다.<br> 
+                <br>
+                불편을 드려 정말 죄송할 따름이며, 고객님께 늘 신선하고 최상의 상품을 불편 없이 전달드리기 위해 최선을 다하는 칼리가 되겠습니다. <br>
+                <br>
+                  칼리 드림.<br>
+                <br>
               </p>
               <p class="written_date">  
                 2022. 11. 11
@@ -850,24 +850,24 @@
           <img class="quest_icon" src="./assets/icons/Icon/question.svg" alt=""/>
           <div class="question">
             <p>
-              스티로폼 박스도 손상되어 있어 포장이 터져 엉망이네요</br>
+              스티로폼 박스도 손상되어 있어 포장이 터져 엉망이네요<br>
               환불 요청합니다.
             </p>
           </div>
           <img class="ans_icon" src="./assets/icons/Icon/answer.svg" alt=""/>
           <div class="answer">
             <p>
-              안녕하세요. 칼리입니다.</br>
-              믿고 찾아주신 상품에 불편을 드려 정말 죄송합니다.</br>
-              </br>
-              더불어, 해당 게시판은 실시간으로 상담이 어려워 순차적으로 답변드리고 있는 관계로 신속하게 답변 드리지 못하여 대단히 죄송합니다.</br> 
-              </br>
-              다행히도 고객님의 불편하셨던 사항은 고객행복센터를 통해 안내 받으신 점 확인하였습니다.</br> 
-              </br>
-              불편을 드려 정말 죄송할 따름이며, 고객님께 늘 신선하고 최상의 상품을 불편 없이 전달드리기 위해 최선을 다하는 칼리가 되겠습니다. </br>
-              </br>
-              칼리 드림.</br>
-              </br>
+              안녕하세요. 칼리입니다.<br>
+              믿고 찾아주신 상품에 불편을 드려 정말 죄송합니다.<br>
+              <br>
+              더불어, 해당 게시판은 실시간으로 상담이 어려워 순차적으로 답변드리고 있는 관계로 신속하게 답변 드리지 못하여 대단히 죄송합니다.<br> 
+              <br>
+              다행히도 고객님의 불편하셨던 사항은 고객행복센터를 통해 안내 받으신 점 확인하였습니다.<br> 
+              <br>
+              불편을 드려 정말 죄송할 따름이며, 고객님께 늘 신선하고 최상의 상품을 불편 없이 전달드리기 위해 최선을 다하는 칼리가 되겠습니다. <br>
+              <br>
+              칼리 드림.<br>
+              <br>
             </p>
             <p class="written_date">  
               2022. 11. 11
@@ -893,7 +893,7 @@
                 [풀무원] 탱탱쫄면(4개입)
               </p>
               <p class="written_review">
-                너무 맛있어여~</br>
+                너무 맛있어여~<br>
                 면이 쫄깃하고 양념도 짱맛나요!!
               </p>
               <p class="written_date">
@@ -914,7 +914,7 @@
                 [풀무원] 탱탱쫄면(4개입)
               </p>
               <p class="written_review">
-                또 주문할 것 같습니다.</br>
+                또 주문할 것 같습니다.<br>
                 너무 맛있어요 내스타일이야~!
               </p>
               <p class="written_date">
@@ -935,7 +935,7 @@
                 [풀무원] 탱탱쫄면(4개입)
               </p>
               <p class="written_review">
-                너무 맛있어여~</br>
+                너무 맛있어여~<br>
                 면이 쫄깃하고 양념도 짱맛나요!!
               </p>
               <p class="written_date">
@@ -1045,24 +1045,24 @@
           <img class="quest_icon" src="./assets/icons/Icon/question.svg" alt=""/>
           <div class="question">
             <p>
-              스티로폼 박스도 손상되어 있어 포장이 터져 엉망이네요</br>
+              스티로폼 박스도 손상되어 있어 포장이 터져 엉망이네요<br>
               환불 요청합니다.
             </p>
           </div>
           <img class="ans_icon" src="./assets/icons/Icon/answer.svg" alt=""/>
           <div class="answer">
             <p>
-              안녕하세요. 칼리입니다.</br>
-              믿고 찾아주신 상품에 불편을 드려 정말 죄송합니다.</br>
-              </br>
-              더불어, 해당 게시판은 실시간으로 상담이 어려워 순차적으로 답변드리고 있는 관계로 신속하게 답변 드리지 못하여 대단히 죄송합니다.</br> 
-              </br>
-              다행히도 고객님의 불편하셨던 사항은 고객행복센터를 통해 안내 받으신 점 확인하였습니다.</br> 
-              </br>
-              불편을 드려 정말 죄송할 따름이며, 고객님께 늘 신선하고 최상의 상품을 불편 없이 전달드리기 위해 최선을 다하는 칼리가 되겠습니다. </br>
-              </br>
-              칼리 드림.</br>
-              </br>
+              안녕하세요. 칼리입니다.<br>
+              믿고 찾아주신 상품에 불편을 드려 정말 죄송합니다.<br>
+              <br>
+              더불어, 해당 게시판은 실시간으로 상담이 어려워 순차적으로 답변드리고 있는 관계로 신속하게 답변 드리지 못하여 대단히 죄송합니다.<br> 
+              <br>
+              다행히도 고객님의 불편하셨던 사항은 고객행복센터를 통해 안내 받으신 점 확인하였습니다.<br> 
+              <br>
+              불편을 드려 정말 죄송할 따름이며, 고객님께 늘 신선하고 최상의 상품을 불편 없이 전달드리기 위해 최선을 다하는 칼리가 되겠습니다. <br>
+              <br>
+              칼리 드림.<br>
+              <br>
             </p>
             <p class="written_date">  
               2022. 11. 11
@@ -1085,24 +1085,24 @@
         <img class="quest_icon" src="./assets/icons/Icon/question.svg" alt=""/>
         <div class="question">
           <p>
-            스티로폼 박스도 손상되어 있어 포장이 터져 엉망이네요</br>
+            스티로폼 박스도 손상되어 있어 포장이 터져 엉망이네요<br>
             환불 요청합니다.
           </p>
         </div>
         <img class="ans_icon" src="./assets/icons/Icon/answer.svg" alt=""/>
         <div class="answer">
           <p>
-            안녕하세요. 칼리입니다.</br>
-            믿고 찾아주신 상품에 불편을 드려 정말 죄송합니다.</br>
-            </br>
-            더불어, 해당 게시판은 실시간으로 상담이 어려워 순차적으로 답변드리고 있는 관계로 신속하게 답변 드리지 못하여 대단히 죄송합니다.</br> 
-            </br>
-            다행히도 고객님의 불편하셨던 사항은 고객행복센터를 통해 안내 받으신 점 확인하였습니다.</br> 
-            </br>
-            불편을 드려 정말 죄송할 따름이며, 고객님께 늘 신선하고 최상의 상품을 불편 없이 전달드리기 위해 최선을 다하는 칼리가 되겠습니다. </br>
-            </br>
-            칼리 드림.</br>
-            </br>
+            안녕하세요. 칼리입니다.<br>
+            믿고 찾아주신 상품에 불편을 드려 정말 죄송합니다.<br>
+            <br>
+            더불어, 해당 게시판은 실시간으로 상담이 어려워 순차적으로 답변드리고 있는 관계로 신속하게 답변 드리지 못하여 대단히 죄송합니다.<br> 
+            <br>
+            다행히도 고객님의 불편하셨던 사항은 고객행복센터를 통해 안내 받으신 점 확인하였습니다.<br> 
+            <br>
+            불편을 드려 정말 죄송할 따름이며, 고객님께 늘 신선하고 최상의 상품을 불편 없이 전달드리기 위해 최선을 다하는 칼리가 되겠습니다. <br>
+            <br>
+            칼리 드림.<br>
+            <br>
           </p>
           <p class="written_date">  
             2022. 11. 11
@@ -1137,24 +1137,24 @@
         <img class="quest_icon" src="./assets/icons/Icon/question.svg" alt=""/>
         <div class="question">
           <p>
-            스티로폼 박스도 손상되어 있어 포장이 터져 엉망이네요</br>
+            스티로폼 박스도 손상되어 있어 포장이 터져 엉망이네요<br>
             환불 요청합니다.
           </p>
         </div>
         <img class="ans_icon" src="./assets/icons/Icon/answer.svg" alt=""/>
         <div class="answer">
           <p>
-            안녕하세요. 칼리입니다.</br>
-            믿고 찾아주신 상품에 불편을 드려 정말 죄송합니다.</br>
-            </br>
-            더불어, 해당 게시판은 실시간으로 상담이 어려워 순차적으로 답변드리고 있는 관계로 신속하게 답변 드리지 못하여 대단히 죄송합니다.</br> 
-            </br>
-            다행히도 고객님의 불편하셨던 사항은 고객행복센터를 통해 안내 받으신 점 확인하였습니다.</br> 
-            </br>
-            불편을 드려 정말 죄송할 따름이며, 고객님께 늘 신선하고 최상의 상품을 불편 없이 전달드리기 위해 최선을 다하는 칼리가 되겠습니다. </br>
-            </br>
-            칼리 드림.</br>
-            </br>
+            안녕하세요. 칼리입니다.<br>
+            믿고 찾아주신 상품에 불편을 드려 정말 죄송합니다.<br>
+            <br>
+            더불어, 해당 게시판은 실시간으로 상담이 어려워 순차적으로 답변드리고 있는 관계로 신속하게 답변 드리지 못하여 대단히 죄송합니다.<br> 
+            <br>
+            다행히도 고객님의 불편하셨던 사항은 고객행복센터를 통해 안내 받으신 점 확인하였습니다.<br> 
+            <br>
+            불편을 드려 정말 죄송할 따름이며, 고객님께 늘 신선하고 최상의 상품을 불편 없이 전달드리기 위해 최선을 다하는 칼리가 되겠습니다. <br>
+            <br>
+            칼리 드림.<br>
+            <br>
           </p>
           <p class="written_date">  
             2022. 11. 11
